Retrieve more than 30 commits if available

--- a/Data collection.ipynb
+++ b/Data collection.ipynb
@@ -73,7 +73,7 @@
        " u'collaborators': 0,\n",
        " u'company': u'Cvent',\n",
        " u'created_at': u'2015-09-16T16:14:22Z',\n",
-       " u'disk_usage': 155405,\n",
+       " u'disk_usage': 155435,\n",
        " u'email': u'bhanotkaran22@gmail.com',\n",
        " u'events_url': u'https://api.github.com/users/kb22/events{/privacy}',\n",
        " u'followers': 35,\n",
@@ -735,7 +735,7 @@
       "(9, {u'Jupyter Notebook': 295254})\n",
       "(10, {u'Jupyter Notebook': 85404})\n",
       "(11, {u'Python': 3034})\n",
-      "(12, {u'Jupyter Notebook': 71643})\n",
+      "(12, {u'Jupyter Notebook': 73804})\n",
       "(13, {u'Jupyter Notebook': 261173})\n",
       "(14, {u'Jupyter Notebook': 39932})\n",
       "(15, {u'PHP': 6386, u'Java': 67597})\n",
@@ -1244,19 +1244,74 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "URL: https://api.github.com/repos/kb22/Activity-Recognition-using-Machine-Learning/commits, commits: 7\n",
+      "URL: https://api.github.com/repos/kb22/Animation-in-C/commits, commits: 2\n",
+      "URL: https://api.github.com/repos/kb22/Article-Recommender/commits, commits: 18\n",
+      "URL: https://api.github.com/repos/kb22/Attendance-Marker/commits, commits: 4\n",
+      "URL: https://api.github.com/repos/kb22/Color-Identification-using-Machine-Learning/commits, commits: 5\n",
+      "URL: https://api.github.com/repos/kb22/Computer-Simulation-using-Proteus/commits, commits: 2\n",
+      "URL: https://api.github.com/repos/kb22/Coursera_Capstone/commits, commits: 30\n",
+      "URL: https://api.github.com/repos/kb22/Coursera_Capstone/commits?page=2, commits: 4\n",
+      "URL: https://api.github.com/repos/kb22/Create-dataset-using-API/commits, commits: 8\n",
+      "URL: https://api.github.com/repos/kb22/Create-Face-Data-from-Images/commits, commits: 6\n",
+      "URL: https://api.github.com/repos/kb22/Deep-Learning-A-Z-Coursework/commits, commits: 17\n",
+      "URL: https://api.github.com/repos/kb22/Digit-Recognition-with-Parameter-Tuning/commits, commits: 12\n",
+      "URL: https://api.github.com/repos/kb22/Face-Detection-using-OpenCV/commits, commits: 8\n",
+      "URL: https://api.github.com/repos/kb22/GitHub-User-Insights-using-API/commits, commits: 8\n",
+      "URL: https://api.github.com/repos/kb22/Heart-Disease-Prediction/commits, commits: 4\n",
+      "URL: https://api.github.com/repos/kb22/House-Price-Predictions/commits, commits: 4\n",
+      "URL: https://api.github.com/repos/kb22/IEEE-MyEvent-App/commits, commits: 30\n",
+      "URL: https://api.github.com/repos/kb22/IEEE-MyEvent-App/commits?page=2, commits: 6\n",
+      "URL: https://api.github.com/repos/kb22/Income-Predictor/commits, commits: 10\n",
+      "URL: https://api.github.com/repos/kb22/kb22.github.io/commits, commits: 11\n",
+      "URL: https://api.github.com/repos/kb22/Machine-Learning-A-Z-CourseWork/commits, commits: 20\n",
+      "URL: https://api.github.com/repos/kb22/Malaria-Cell-Identifier-using-CNN/commits, commits: 5\n",
+      "URL: https://api.github.com/repos/kb22/ML-Performance-Evaluation/commits, commits: 4\n",
+      "URL: https://api.github.com/repos/kb22/ML-React-App-Template/commits, commits: 25\n",
+      "URL: https://api.github.com/repos/kb22/PFWebsite/commits, commits: 30\n",
+      "URL: https://api.github.com/repos/kb22/PFWebsite/commits?page=2, commits: 1\n",
+      "URL: https://api.github.com/repos/kb22/Plot-Maps-in-Python/commits, commits: 15\n",
+      "URL: https://api.github.com/repos/kb22/Purchasing-Intention-Prediction/commits, commits: 11\n",
+      "URL: https://api.github.com/repos/kb22/Quiz-using-Files/commits, commits: 6\n",
+      "URL: https://api.github.com/repos/kb22/Silence-It/commits, commits: 25\n",
+      "URL: https://api.github.com/repos/kb22/TextEditor/commits, commits: 19\n",
+      "URL: https://api.github.com/repos/kb22/Twitter-Sentiment-Analysis/commits, commits: 15\n",
+      "URL: https://api.github.com/repos/kb22/Understanding-Flask-and-Flask-RESTPlus/commits, commits: 4\n",
+      "URL: https://api.github.com/repos/kb22/Understanding-Numpy/commits, commits: 11\n",
+      "URL: https://api.github.com/repos/kb22/Virtual-trainer/commits, commits: 1\n",
+      "URL: https://api.github.com/repos/kb22/Virtual-trainer-data-collector/commits, commits: 1\n",
+      "URL: https://api.github.com/repos/kb22/Visualization-using-Matplotlib/commits, commits: 7\n",
+      "URL: https://api.github.com/repos/kb22/Web-Scraping-using-Python/commits, commits: 10\n",
+      "URL: https://api.github.com/repos/kb22/Word-Cloud/commits, commits: 2\n"
+     ]
+    }
+   ],
    "source": [
     "commits_information = []\n",
     "for i in range(repos_df.shape[0]):\n",
-    "    response = requests.get(repos_df.loc[i, 'Commits URL'], auth = authentication)\n",
-    "    response = response.json()\n",
-    "    for commit in response:\n",
-    "        commit_data = []\n",
-    "        commit_data.append(repos_df.loc[i, 'Id'])\n",
-    "        commit_data.append(commit['sha'])\n",
-    "        commit_data.append(commit['commit']['committer']['date'])\n",
-    "        commit_data.append(commit['commit']['message'])\n",
-    "        commits_information.append(commit_data)"
+    "    url = repos_df.loc[i, 'Commits URL']\n",
+    "    page_no = 1\n",
+    "    while (True):\n",
+    "        response = requests.get(url, auth = authentication)\n",
+    "        response = response.json()\n",
+    "        print(\"URL: {}, commits: {}\".format(url, len(response)))\n",
+    "        for commit in response:\n",
+    "            commit_data = []\n",
+    "            commit_data.append(repos_df.loc[i, 'Id'])\n",
+    "            commit_data.append(commit['sha'])\n",
+    "            commit_data.append(commit['commit']['committer']['date'])\n",
+    "            commit_data.append(commit['commit']['message'])\n",
+    "            commits_information.append(commit_data)\n",
+    "        if (len(response) == 30):\n",
+    "            page_no = page_no + 1\n",
+    "            url = repos_df.loc[i, 'Commits URL'] + '?page=' + str(page_no)\n",
+    "        else:\n",
+    "            break"
    ]
   },
   {
