Update text description

--- a/Github Insights.ipynb
+++ b/Github Insights.ipynb
@@ -41,6 +41,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Analysis\n",
+    "\n",
+    "Let's begin by exploring the repos and commit datasets. Then, I'll check the repos on the basis of forks, stars and watchers. Finally, I'll check the commit messages."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -57,15 +66,6 @@
    "source": [
     "print(\"Total repos till date: {}\".format(repos.shape[0]))\n",
     "print(\"Total commits till date: {}\".format(commits.shape[0]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Basic Analysis\n",
-    "\n",
-    "Let's begin by exploring the repos dataset on the basis of forks, stars and watchers."
    ]
   },
   {
